[build-system]
requires = ["briefcase"]

[tool.briefcase]
project_name = "Podium"
version = "0.3"
bundle = "org.beeware"
author = 'Russell Keith-Magee'
author_email = 'russell@keith-magee.com'
homepage = 'https://beeware.org/project/projects/applications/podium'

[tool.briefcase.app.podium]
formal_name = "Podium"
description = "A presentation tool for developers."
sources = ["src/podium"]
icon = "src/podium/resources/podium"

[tool.briefcase.app.podium.document_type.deck]
description = "Podium Slide Deck"
extension = "podium"
icon = "src/podium/resources/podium-deck"
url = 'https://beeware.org/project/projects/applications/podium/'

[tool.briefcase.app.podium.macOS]
requires = [
    "toga-cocoa==0.3.0.dev39",
    "std-nslog==1.0.1",
]

[tool.briefcase.app.podium.linux]
requires = [
    "toga-gtk==0.3.0.dev39"
]
