[build-system]
requires = ["briefcase"]

[tool.briefcase]
project_name = "Podium"
version = "0.3"
license.file = "LICENSE"
bundle = "org.beeware"
author = 'Russell Keith-Magee'
author_email = 'russell@keith-magee.com'
homepage = 'https://beeware.org/project/projects/applications/podium'

[tool.briefcase.app.podium]
formal_name = "Podium"
description = "A presentation tool for developers."
long_description = """A slide presentation tool.

It is focussed on developer needs, using Markdown as a slide format.
"""
sources = ["src/podium"]
icon = "icons/podium"

[tool.briefcase.app.podium.document_type.deck]
description = "Podium Slide Deck"
extension = "podium"
icon = "icons/podium-deck"
url = 'https://beeware.org/project/projects/applications/podium/'
macOS.UTTypeConformsTo = ["com.apple.package", "public.content"]

[tool.briefcase.app.podium.macOS]
requires = [
    "toga-cocoa==0.5.1",
    "std-nslog==1.0.1",
]

[tool.briefcase.app.podium.linux]
requires = [
    "toga-gtk==0.5.1"
]

[tool.briefcase.app.podium.linux.system.debian]
system_requires = [
    # Needed to compile pycairo wheel
    "libcairo2-dev",
    "libgirepository-2.0-dev",
]

system_runtime_requires = [
    # Needed to provide GTK and its GI bindings
    "gir1.2-gtk-3.0",
    "libgirepository-2.0-0",
    # Dependencies that GTK looks for at runtime
    "libcanberra-gtk3-module",
    # Needed to provide WebKit2 at runtime
    # Note: Debian 11 requires gir1.2-webkit2-4.0 instead
    "gir1.2-webkit2-4.1",
]

[tool.briefcase.app.podium.linux.system.rhel]
system_requires = [
    # Needed to compile pycairo wheel
    "cairo-gobject-devel",
    # Needed to compile PyGObject wheel
    "gobject-introspection-devel",
]

system_runtime_requires = [
    # Needed to support Python bindings to GTK
    "gobject-introspection",
    # Needed to provide GTK
    "gtk3",
    # Dependencies that GTK looks for at runtime
    "libcanberra-gtk3",
    # Needed to provide WebKit2 at runtime
    "webkit2gtk4.1",
]

[tool.briefcase.app.podium.linux.system.suse]
system_requires = [
    # Needed to compile pycairo wheel
    "cairo-devel",
    # Needed to compile PyGObject wheel
    "gobject-introspection-devel",
]

system_runtime_requires = [
    # Needed to provide GTK
    "gtk3",
    # Needed to support Python bindings to GTK
    "gobject-introspection", "typelib(Gtk) = 3.0",
    # Dependencies that GTK looks for at runtime
    "libcanberra-gtk3-module",
    # Needed to provide WebKit2 at runtime
    "libwebkit2gtk3", "typelib(WebKit2)",
]

[tool.briefcase.app.podium.linux.system.arch]
system_requires = [
    # Needed to compile pycairo wheel
    "cairo",
    # Needed to compile PyGObject wheel
    "gobject-introspection",
    # Runtime dependencies that need to exist so that the
    # Arch package passes final validation.
    # Needed to provide GTK
    "gtk3",
    # Dependencies that GTK looks for at runtime
    "libcanberra",
    # Needed to provide WebKit2
    "webkit2gtk",
]

system_runtime_requires = [
    # Needed to provide GTK
    "gtk3",
    # Needed to provide PyGObject bindings
    "gobject-introspection-runtime",
    # Dependencies that GTK looks for at runtime
    "libcanberra",
    # Needed to provide WebKit2 at runtime
    "webkit2gtk",
]

[tool.briefcase.app.podium.linux.appimage]
supported = false

[tool.briefcase.app.podium.linux.flatpak]
flatpak_runtime = "org.gnome.Platform"
flatpak_runtime_version = "48"
flatpak_sdk = "org.gnome.Sdk"

[tool.briefcase.app.podium.windows]
requires = [
    "toga-winforms==0.5.1"
]

[tool.briefcase.app.podium.iOS]
supported = false

[tool.briefcase.app.podium.android]
supported = false

[tool.briefcase.app.podium.web]
supported = false
